--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-linuxmuster-freefork (0.1.0-lenny0) openml5-testing; urgency=low
+linuxmuster-freefork (0.1.0-lenny1) openml5-testing; urgency=low
 
   * first version
+  * new default startpage for apache
 
- -- Frank Schiebel <frank@linuxmuster.net>  Thu, 13 Dec 2012 17:25:47 +0100
-
+ -- Frank Schiebel <frank@linuxmuster.net>  Fri, 14 Dec 2012 17:20:05 +0100
